# docs/swagger.json
@@ -141,6 +141,34 @@
                 }
             }
         },
+        "/file/download/all": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "download all files",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "download all files",
+                "responses": {
+                    "200": {
+                        "description": "All files downloaded successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid JWT",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "security": [
